@@ -348,51 +348,49 @@ namespace :deploy do
     deployed your application before, or if your application is (for some \
     other reason) not currently running. It will deploy the code, run any \
     pending migrations, and then instead of invoking `deploy:restart', it will
-    invoke `deploy:app:start' to fire up the application servers.
+    invoke `deploy:start' to fire up the application servers.
   DESC
   task :cold do
     update
     migrate
-    app.start
+    start
   end
 
-  namespace :app do
-    desc <<-DESC
-      Start the application servers. This will attempt to invoke a script \
-      in your application called `script/spin', which must know how to start \
-      your application listeners. For Rails applications, you might just have \
-      that script invoke `script/process/spawner' with the appropriate \
-      arguments.
+  desc <<-DESC
+    Start the application servers. This will attempt to invoke a script \
+    in your application called `script/spin', which must know how to start \
+    your application listeners. For Rails applications, you might just have \
+    that script invoke `script/process/spawner' with the appropriate \
+    arguments.
 
-      By default, the script will be executed via sudo as the `app' user. If \
-      you wish to run it as a different user, set the :runner variable to \
-      that user. If you are in an environment where you can't use sudo, set \
-      the :use_sudo variable to false.
-    DESC
-    task :start, :roles => :app do
-      as = fetch(:runner, "app")
-      via = fetch(:run_method, :sudo)
-      invoke_command "sh -c 'cd #{current_path} && nohup script/spin'", :via => via, :as => as
-    end
+    By default, the script will be executed via sudo as the `app' user. If \
+    you wish to run it as a different user, set the :runner variable to \
+    that user. If you are in an environment where you can't use sudo, set \
+    the :use_sudo variable to false.
+  DESC
+  task :start, :roles => :app do
+    as = fetch(:runner, "app")
+    via = fetch(:run_method, :sudo)
+    invoke_command "sh -c 'cd #{current_path} && nohup script/spin'", :via => via, :as => as
+  end
 
-    desc <<-DESC
-      Stop the application servers. This will call script/process/reaper for \
-      both the spawner process, and all of the application processes it has \
-      spawned. As such, it is fairly Rails specific and may need to be \
-      overridden for other systems.
+  desc <<-DESC
+    Stop the application servers. This will call script/process/reaper for \
+    both the spawner process, and all of the application processes it has \
+    spawned. As such, it is fairly Rails specific and may need to be \
+    overridden for other systems.
 
-      By default, the script will be executed via sudo as the `app' user. If \
-      you wish to run it as a different user, set the :runner variable to \
-      that user. If you are in an environment where you can't use sudo, set \
-      the :use_sudo variable to false.
-    DESC
-    task :stop, :roles => :app do
-      as = fetch(:runner, "app")
-      via = fetch(:run_method, :sudo)
+    By default, the script will be executed via sudo as the `app' user. If \
+    you wish to run it as a different user, set the :runner variable to \
+    that user. If you are in an environment where you can't use sudo, set \
+    the :use_sudo variable to false.
+  DESC
+  task :stop, :roles => :app do
+    as = fetch(:runner, "app")
+    via = fetch(:run_method, :sudo)
 
-      invoke_command "#{current_path}/script/process/reaper -a kill -r dispatch.spawner.pid", :via => via, :as => as
-      invoke_command "#{current_path}/script/process/reaper -a kill", :via => via, :as => as
-    end
+    invoke_command "#{current_path}/script/process/reaper -a kill -r dispatch.spawner.pid", :via => via, :as => as
+    invoke_command "#{current_path}/script/process/reaper -a kill", :via => via, :as => as
   end
 
   namespace :pending do
